# ClaudeMC

./: .gitignore  README.md  index.html  render.yaml  test.md
.github/workflows/: pages.yml
client/: README.md  index.html  style.css
client/js/: blocks.js  config.js  entities.js  fluids.js  inventory.js  items.js  light.js  main.js  menu.js  net.js  noise.js  player.js  remoteplayer.js  save.js  settings.js  sound.js  structures.js  texpack.js  viewmodel.js  world.js
client/texturepack/: LIES-MICH.txt
server/: Cargo.toml  server-config.example.json
server/src/: main.rs
server/tests/: hub.rs
