[package]
name = "claudemc-ws"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "claudemc-ws"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio-tungstenite = "0.23"
